--- a/ph/1.fnVsFatFn/index.html
+++ b/ph/1.fnVsFatFn/index.html
@@ -13,5 +13,6 @@
     <p id="thanks"></p>
 
     <script src="./1.fnVsFatFn.js"></script>
+    <script src="./prototype.js"></script>
 </body>
 </html>
